--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="error_please_try_again">Error,Please try again.</string>
     <string name="enter_city_name">Enter City Name</string>
     <string name="city_name">City Name</string>
+    <string name="search">Search</string>
 </resources>
